# su3-distillation

./: .gitignore  a085m200.yml  check-all-files.py  convert-sdb.sh  create-a085m200.sh  create-b3.4-s24t64.sh  create-b3.4-s32t64.sh  create-b3.4-s36t64.sh  create-b3.4-s48t64.sh  create-b3.6-s32t64.sh  create-b3.6-s40t64.sh  create-b3.6-s48t64.sh  create-b3.6-s64t64.sh  create-jureca.py  create_tasks_ens.py  inspect_dpi.py  launch-binned.sh  launch-meson.sh  launch-perams-charm.sh  launch-perams.sh  launch_eigs.sh  meson-h5.sh  perams-charm-h5.sh  perams-h5.sh  pi_cfg1750_2pt_nvec_64_tsrc_16_test.h5  pyproject.toml
contractions-launch/: exotract.ini.yml  generate_batch.py
h5-out/: simple.ini.xml
scripts/: .create-peram.sh.swp  clean_ini_files.py  clean_mesons.sh  clean_metaq.sh  clean_perams.sh  create-3.57.sh  create-a085m200.sh  create-a085m420.sh  create-disco.sh  create-eigs.sh  create-meson-peram-binned.sh  create-mesons.sh  create-peram_clov.sh  create-perams-gio.sh  create-perams.sh  create-perams_charms.sh  create_binned_tasks.py  create_tasks.py  create_tasks_ens.py
templates/: disco.jinja.xml  eigs.jinja.xml  eigs.sh.j2  meson.jinja.xml  meson.sh.j2  meson2.sh.j2  meson2_eric.jinja.xml  meson2_jureca.sh.j2  meson_eric.jinja.xml  meson_jureca.sh.j2  meson_juwels.sh.j2  peram.sh.j2  peram_charm_clover.sh.j2  peram_charm_jureca.sh.j2  peram_charm_juwels.sh.j2  peram_charm_mg_binned.sh.j2  peram_charm_multigrid.jinja.xml  peram_charm_multigrid_eric.jinja.xml  peram_clover.jinja.xml  peram_juwels.sh.j2  peram_mg_binned.sh.j2  peram_mg_copy.jinja.xml  (+2 more)
(+37 files in other folders)
